Fix leaderboard names spilling lines - temporary fix

--- a/ui/public/css/base.less
+++ b/ui/public/css/base.less
@@ -460,6 +460,7 @@ body {
     font-size: 60px;
     line-height: 56px;
     font-weight: 700;
+    white-space: nowrap;
 }
 
 .leaderboard__player:nth-child(even) {
